# TickClick

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
agent/: index.ts
agent/prompts/: system.ts
agent/tools/: checkCalendar.ts  executeBooking.ts  matchEvents.ts  scrapeEvents.ts
app/: globals.css  layout.tsx  page.tsx
app/api/agent/: route.ts
app/api/agent/execute-booking/: route.ts
app/api/audius/discover/: route.ts
app/api/auth/google/: route.ts
app/api/auth/google/callback/: route.ts
app/api/calendar/freebusy/: route.ts
app/api/ticket-metadata/: route.ts
app/components/: AudiusPlayer.tsx  ChatWindow.tsx  Header.tsx  PhantomGate.tsx  TicketCard.tsx  ToolCallPanel.tsx
hooks/: usePhantom.ts
lib/: audius.ts  email.ts  solana.ts
programs/ticket-manager/: Cargo.toml
programs/ticket-manager/src/: lib.rs
scripts/: create-merkle-tree.ts  create-venue-keypair.ts  setup-merkle-tree.ts  setup-wallets.ts
types/: index.ts
