[package]
name = "ticket-manager"
version = "0.1.0"
description = "TixAgent TicketManager - Atomic ticket purchase and redemption on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticket_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["idl-build"] }
